# fastapi-discovery

./: .gitignore  pyproject.toml
fastapi_discovery/: crud.py  database.py  main.py  models.py  schemas.py
tests/: test_fastapi_discovery.py
