[tool.poetry]
name = "fastapi-discovery"
version = "0.1.1"
description = ""
authors = ["Denys Halenok <denys.halenok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.1"
hypercorn = "^0.9.0"
sqlalchemy = "^1.3"


[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
